--- a/order.yml
+++ b/order.yml
@@ -1,6 +1,17 @@
 spring:
   application:
     name: order
+    cloud:
+      config:
+        discovery:
+          enabled: true
+          service-id: CONFIG
+        profile: dev
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
@@ -8,3 +19,11 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+  cloud:
+    stream:
+      bindings:
+        input:
+          destination: mqTestDefault
+        output:
+          destination: mqTestDefault
+          contentType: text/plain
