--- a/product-dev.yml
+++ b/product-dev.yml
@@ -8,5 +8,10 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 boy:
   name: abg
