--- a/order-dev.yml
+++ b/order-dev.yml
@@ -1,12 +1,6 @@
 spring:
   application:
     name: order
-    cloud:
-      config:
-        discovery:
-          enabled: true
-          service-id: CONFIG
-        profile: dev
   rabbitmq:
     host: localhost
     port: 5672
@@ -19,7 +13,15 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+  redis:
+    host: 127.0.0.1
+    port: 6379
   cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: CONFIG
+      profile: dev
     stream:
       bindings:
         input:
@@ -27,7 +29,6 @@ spring:
         output:
           destination: mqTestDefault
           contentType: text/plain
-env: dev112
 girl:
   name: lili
   age: 19
