--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -1,10 +1,11 @@
 zuul:
+  sensitive-headers: 
   routes:
     myProduct:
       path: /myProduct/**
       serviceId: product
       #需要过滤的httpheader，默认会不传递cookie
-      sensitiveHeaders:
+      #sensitiveHeaders:
 #下面是简洁写法：
 #    product: /myProduct/**
   #ignored-patterns:
